2009-02-15 Pierre Wieser <pwieser@trychlos.org>

	Update GConf I/O provider.
	Create src/io-gconf/nagp-keys.c
	Rename src/io-gconf/nagp-write.{c,h} to src/io-gconf/nagp-writer.{c,h}
	Rename src/io-gconf/nagp-read.{c,h} to src/io-gconf/nagp-reader.{c,h}

	Update I/O desktop provider.

	* src/io-desktop/nadp-keys.c:
	* src/io-desktop/nadp-keys.h: New files.

	Rename src/io-desktop/nadp-xdg-data-dirs.{c,h} to src/io-desktop/nadp-xdg-dirs.{c,h}
	Rename src/io-desktop/nadp-write.{c,h} to src/io-desktop/nadp-writer.{c,h}
	Rename src/io-desktop/nadp-read.{c,h} to src/io-desktop/nadp-reader.{c,h}

	NAObject-derived classes implement NAIDataFactory interface.

	* src/core/na-object-id-enum.c:
	* src/core/na-object-item-enum.c:
	* src/core/na-object-action-enum.c:
	* src/core/na-object-profile-enum.c:
	* src/core/na-object-menu-enum.c: New files.

	Define NADataElement class.

	* src/core/na-data-element.c:
	* src/core/na-data-element.h: New files.

	Define NAIDataFactory interface.

	* src/api/na-idata-factory.h:
	* src/api/na-idata-factory-enum.h:
	* src/api/na-idata-factory-str.h:
	* src/core/na-idata-factory.c:
	* src/core/na-data-factory.c:
	* src/core/na-data-factory.h: New files.

	Define NAIIOFactory interface.

	* src/api/na-iio-factory.h:
	* src/api/na-iio-factory-factory.h:
	* src/core/na-iio-factory.c:
	* src/core/na-io-factory.c:
	* src/core/na-io-factory.h: New files.

	Rename src/core/na-object-menu-class.h to src/api/na-object-menu.h
	Rename src/core/na-object-profile-class.h to src/api/na-object-profile.h
	Rename src/core/na-object-action-class.h to src/api/na-object-action.h
	Rename src/core/na-object-item-class.h to src/api/na-object-item.h
	Rename src/core/na-object-id-class.h to src/api/na-object-id.h
	Rename src/core/na-object-class.h to src/api/na-object.h
	Rename src/core/na-iduplicable.h to src/api/na-iduplicable.h
	Rename src/core/na-gconf-utils.h to src/api/na-gconf-utils.h
	Rename src/api/na-iio-provider.c to src/core/na-iio-provider.c
