@@ -1,5 +1,6 @@
 2009-02-15 Pierre Wieser <pwieser@trychlos.org>
 
+	Remove useless src/api/na-gconf-keys.h
 	Update GConf I/O provider.
 	Create src/io-gconf/nagp-keys.c
 	Rename src/io-gconf/nagp-write.{c,h} to src/io-gconf/nagp-writer.{c,h}
